# bruh_sine

./: Cargo.toml  README.md  bundler.toml
_nih_plug_vizia/: Cargo.toml
nih_plug_vizia/: Cargo.toml
src/: editor.rs  lib.rs  main.rs
src/editor/: param_knob.rs  style.css
vizia/: Cargo.toml
vizia/crates/vizia_core/: Cargo.toml
vizia/crates/vizia_core/src/views/: knob.rs
