[package]
name = "bruh_sine"
version = "0.1.0"
edition = "2021"
authors = ["sout <sout_Nantang@outlook.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/sout233"
description = "What the hell with the sine function"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
nih_plug_vizia = { path = "nih_plug_vizia" }
atomic_float = "0.1"
image = "0.25.1"


[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
